# astParser

./: .gitignore  CMakeLists.txt  ast.h  main.cpp  setup.py  tokenizer.h
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  python-build.yml  python-publish.yml
deactivate/: pyvenv.cfg
include/: Context.h  astnode.h  expression.h  gamma.h  mandelbrot.h  token.h  tokenExpr.h  tokenizer.h
src/: CMakeLists.txt  benchmark.cpp  main.cpp
tests/: CMakeLists.txt  all_tests.cpp  ast_test.cpp  tokenizer_test.cpp
